# mlip-ir-sim

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
src/mlip_ir_sim/: __init__.py  builder.py  charges.py  dipole.py  results.py  safety.py  simulator.py  spectrum.py  utils.py
src/mlip_ir_sim/calculators/: aimnet2.py  gaff2.py
tests/: stearic_acid.xyz  test_builder.py  test_simulator.py  test_spectrum.py
